optimized docker image creation